# sundayrec

./: .env.example  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  PRIVACY.md  README.md  SundayRec_Strategi_2026.docx  audit.json  electron.vite.config.ts  eslint.config.js  jest.config.ts  jest.setup-tz.ts  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  ci.yml  release.yml
__mocks__/: electron-store.ts  electron.ts
assets/: entitlements.mac.plist  icon.icns
crates/sundayrec-core/: Cargo.toml
crates/sundayrec-core/src/: audio_analysis.rs  capture.rs  chapters.rs  church_calendar.rs  device_enum.rs  diagnostics.rs  editor.rs  email.rs  errors.rs  feed.rs  ffmpeg.rs  filename.rs  history.rs  levels.rs  lib.rs  link.rs  mastering.rs  mjpeg.rs  ndi.rs  overlay.rs  preflight.rs  preroll.rs  processing.rs  recorder.rs  schedule.rs  settings.rs  streaming.rs  test_recording.rs  tray.rs  two_process.rs  update.rs  wake.rs  webhook.rs  whisper.rs
crates/sundayrec-core/src/cloud/: mod.rs  oauth.rs  queue.rs
crates/sundayrec-core/src/integrations/: live_bridge.rs  mod.rs  settings.rs  stage.rs  sundayedit.rs
docs/: ASIO-TEST-MATRIX.md  BUILD_ASIO.md  COMPLETION.md  DISTRIBUTION.md  EDITOR-PORT.md  MIGRATION-TAURI2.md  NATT-AUDIT-2026-06-07.md  NATT-LYD-VIDEO.md  NATT-SEAM-AUDIT.md  NEEDS-RICHARD.md  PHASE6.md  PRO-AUDIO-WINDOWS.md  QUICK-START.md  RELEASE-CHECKLIST.md  SETUP-CLOUD.md  SETUP-GOOGLE.md  SMOKE-TEST.md  START-LATENCY-ANALYSIS.md  USER-TASKS.md  WINDOWS-PROCESS-HYGIENE.md  WINDOWS-RIGG-START.md
docs/integration/: plan.md  song.md  stage.md  verbatim.md
legacy/locales/: da.json  de.json  en.json  fr.json  no.json  pl.json  sv.json
legacy/renderer/: api-shim.ts  autostart-reminder.ts  index.html  main.ts  styles.css
legacy/shared/: church-calendar.ts
legacy/types/: index.ts
reference/bindings/: AudioDevice.ts  AudioDeviceList.ts  AudioDiagnostics.ts  AuthStatus.ts  CameraCapabilities.ts  ChapterMarker.ts  CloudConnectionStatus.ts  CloudFolder.ts  CloudService.ts  DeviceInventory.ts  DriveFolder.ts  EditorAutoProcess.ts  EditorChannelDiagnosis.ts  EditorChannelRepair.ts  EditorChapter.ts  EditorCutRegion.ts  EditorEqBand.ts  EditorExportRequest.ts  EditorExportResult.ts  EditorLoudness.ts  EditorMasterApplyRequest.ts  EditorMasterApplyResult.ts  EditorMasterPreset.ts  EditorMasterPreviewResult.ts  EditorMasterProgress.ts  EditorMediaInfo.ts  EditorPeaks.ts  EditorProcessing.ts  EditorSegment.ts  EditorStreamInfo.ts  EditorTranscriptLine.ts  EmailTransportKind.ts  EpisodePrep.ts  EpisodePrepStatus.ts  FeedPreview.ts  FfmpegDevice.ts  FfmpegHealth.ts  IntegrationConnection.ts  IntegrationSettings.ts  LiturgicalDay.ts  (+66 more)
scripts/: build-grandiose.sh  build-mac.sh  fetch-ffmpeg.mjs  fix-bindings-imports.mjs  test-ndi.js
src/: App.test.tsx  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: asio_spike.rs
src-tauri/migrations/: 0001_init.sql  0003_upload_queue.sql
src-tauri/src/: account.rs  error.rs  lib.rs
src-tauri/src/audio/: asio.rs  device_enum.rs  devices.rs  mod.rs  vu.rs
src-tauri/src/bridge_live/: mod.rs
src-tauri/src/cloud/: config.rs  mod.rs  oauth_flow.rs  store.rs  worker.rs
src-tauri/src/commands/: account.rs  app.rs  audio.rs  cloud.rs  db.rs  diagnostics.rs  editor.rs  email.rs  haptics.rs  integrations.rs  media.rs  mod.rs  ndi.rs  publish.rs  recorder.rs  review.rs  scheduler.rs  settings.rs  streaming.rs  update.rs  whisper.rs
src-tauri/src/db/: mod.rs  store.rs
src-tauri/src/diagnostics/: mod.rs
src-tauri/src/editor/: mod.rs
src-tauri/src/email/: mod.rs
src-tauri/src/media/: camera.rs  ffmpeg.rs  mod.rs  permissions.rs  preview.rs
src-tauri/src/ndi/: mod.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/preflight/: mod.rs
src-tauri/src/publish/: mod.rs
src-tauri/src/recorder/: concat.rs  cpal_capture.rs  engine.rs  mod.rs  preroll.rs  recovery.rs  two_process.rs
src-tauri/src/scheduler/: mod.rs
src-tauri/src/secrets/: mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/streaming/: mod.rs
src-tauri/src/test_recording/: mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/update/: mod.rs
src-tauri/src/whisper/: mod.rs
src/components/: CommandPalette.test.tsx  CommandPalette.tsx  LanguageSwitcher.tsx  MainLayout.test.tsx  MainLayout.tsx  Toast.test.tsx  Toast.tsx
src/design/: atoms.tsx  hooks.ts  tokens.css
src/i18n/: i18n.test.tsx  index.ts  parity.test.ts
src/lib/: haptics.test.ts  haptics.ts  navigation.ts  routing.test.ts  routing.ts
src/locales/: da.json  de.json  en.json  fr.json  no.json  pl.json  sv.json
src/main/: audio-analysis.ts  diagnostics.ts  editor.ts  index.ts  logger.ts  mailer.ts  mastering.ts  native-recorder.ts  ndi-receiver.ts  overlay.ts  preflight.ts  prep-episode.ts  preroll.ts  recorder-utils.ts  recorder.ts  review-queue.ts  scheduler.ts  store.ts  stream-keys.ts  streamer.ts  test-recorder.ts  thumbnail.ts  tray.ts  unified-recorder.ts  updater.ts  wake.ts  (+6 more)
tests/: audio-analysis.test.ts  church-calendar.test.ts  cloud-dropbox.test.ts  cloud-google-drive.test.ts  cloud-http-util.test.ts  cloud-oauth.test.ts  cloud-onedrive.test.ts  cloud-upload-queue.test.ts  diagnostics.test.ts  editor.test.ts  failure-modes.test.ts  filename.test.ts  mailer.test.ts  mastering.test.ts  native-recorder.test.ts  overlay.test.ts  plan.test.ts  preflight.test.ts  prep-episode.test.ts  preroll.test.ts  publish.test.ts  recorder-utils.test.ts  recorder.test.ts  recording-integration.test.ts  review-queue.test.ts  rss-feed.test.ts  scheduler.test.ts  service-link.test.ts  song.test.ts  stage.test.ts  store.test.ts  test-recorder.test.ts  thumbnail.test.ts  unified.test.ts  updater.test.ts  verbatim.test.ts  video-preview.test.ts  video.test.ts  wake-verification.test.ts  wake.test.ts
(+212 files in other folders)
