[package]
name = "sundayrec"
version = "0.1.0"
description = "Recording for church services — part of the Sunday suite (Tauri 2 rebuild of the Electron app)"
authors = ["Richard Fossland"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary to make the lib name
# unique and avoid conflicting with the bin name. This is only an issue on
# Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sundayrec_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Pure, GUI-free domain core — the recorder behaviour distilled from Electron.
sundayrec-core = { path = "../crates/sundayrec-core" }

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# Native file dialogs (open/save recordings) — needed from early phases.
tauri-plugin-dialog = "2.7.1"
# `process` plugin: relaunch/exit, used by the updater flow later.
tauri-plugin-process = "2"
# Native notifications — the scheduler (Fase 5) fires "recording starts in N
# min" reminders and preflight/missed alerts from the backend, even when the
# window is hidden in the tray.
tauri-plugin-notification = "2"

# Native audio I/O (CoreAudio / WASAPI) — used by the VU metering engine to
# read microphone levels in Rust, so the webview never needs `getUserMedia`.
cpal = "0.15"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Encodes MJPEG preview frames as base64 so they cross the Tauri event boundary
# as plain JSON (the renderer drops them into `data:image/jpeg;base64,…`).
base64 = "0.22"

# Async process control for the ffmpeg sidecar. We use `tokio::process` (not
# `std::process`) for the recorder + MJPEG-preview because we need to stream
# stderr/stdout line-by-line in real time (parsing `size=`/`silence_*` progress)
# while the process keeps running, and to send a graceful `q` on stdin to stop
# encoding cleanly. `std::process` only gives us a blocking `wait()`/`output()`.
tokio = { version = "1", features = ["full"] }
thiserror = "2"
# Wall-clock → local civil time for the scheduler shell. The pure decisions live
# in `sundayrec-core::schedule` (clock-free); this crate owns `Local::now()` and
# feeds the `NaiveDateTime` in. `clock` (default) is required here for `Local`.
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Local-first storage. Replaces Electron's `electron-store` (a JSON blob) with
# SQLite via sqlx. Runtime-checked queries (no DATABASE_URL / `.sqlx` cache
# needed to build); `migrate` runs the versioned schema in `migrations/`.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
] }
# Time-ordered ids (UUID v7) for rows — sortable by creation without a separate
# timestamp index.
uuid = { version = "1", features = ["v7"] }

# OS-native secret storage. Replaces Electron's `safeStorage` — OAuth tokens and
# stream keys live in the macOS Keychain / Windows Credential Manager, never in
# a plaintext file.
keyring = { version = "3", features = ["apple-native", "windows-native"] }

# Type generation for the frontend (run with `cargo test export_bindings`).
ts-rs = { version = "11", features = ["serde-compat"] }

# Free-disk-space probe for the preflight check (F2.2). `fs4` is a tiny,
# dependency-light cross-platform wrapper over the native statfs /
# GetDiskFreeSpaceEx calls (`fs4::available_space(path)`), chosen over the much
# heavier `sysinfo` (which pulls a whole process/CPU/disk inventory we don't
# need just to read free bytes on one volume).
fs4 = "1.1"

[dev-dependencies]
# Throwaway temp databases for the storage tests — no app, no device.
tempfile = "3"
