[package]
name = "sundayrec"
version = "0.2.0"
description = "Recording for church services — part of the Sunday suite (Tauri 2 rebuild of the Electron app)"
authors = ["Richard Fossland"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary to make the lib name
# unique and avoid conflicting with the bin name. This is only an issue on
# Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sundayrec_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Optional Electron-parity seams (PU-1/2/3). All DEFAULT-OFF so the shipping
# build and the headless CI gate carry no extra native deps; enable per feature
# (`--features email`) once the network/GUI path is being smoke-tested on a real
# rig. Each gates its impure I/O over the unit-tested `sundayrec-core` decisions.
[features]
# The non-destructive editor (R1) AND whisper transcription (PU-5) ship in the
# default build so the Rediger screen + "transkriber tale" work out of the box.
# `editor` adds no native dep (ffmpeg is a sidecar). `whisper` links libwhisper
# (whisper-rs) — verified to build in ~16s on Apple silicon and cached after, so
# the cost is acceptable for the value; the model is downloaded at runtime via the
# UI (`whisper_download_model`). Both run real ffmpeg/inference (HARDWARE-
# UNVERIFIED). Build with `--no-default-features` and they return `feature_disabled`.
default = ["editor", "whisper", "tray"]
# PU-1: SMTP/Gmail error+test alerts. Pulls `lettre` for the SMTP transport (the
# Gmail-API path reuses the already-present `reqwest`).
email = ["dep:lettre"]
# PU-2: native menubar tray + `sundayrec://` scheme handler.
tray = ["tauri/tray-icon", "dep:tauri-plugin-deep-link"]
# PU-3: write/upload the podcast RSS feed (reuses `reqwest` + the cloud worker).
publish = []
# R1: non-destructive editor — ffmpeg-driven load/peaks/segments/mastering/
# export/frame-extract over the unit-tested
# `sundayrec-core::{editor,mastering,audio_analysis}` decisions. NO new native dep
# (ffmpeg is a sidecar; WAV/PCM parsed by hand), so the feature gate only compiles
# the I/O seam in/out. NOW IN `default` (see above) so the Rediger screen is live:
# the ffmpeg runs are still HARDWARE-UNVERIFIED (need real media). Build OFF
# (`--no-default-features`) and the commands return a clear `feature_disabled`
# error (same idiom as `whisper`).
editor = []
# PU-5: whisper.cpp transcription. Pulls `whisper-rs` (binds libwhisper) for the
# actual inference; the model registry/argv/normalise decisions are in
# `sundayrec-core::whisper`. DEFAULT-OFF — the C/C++ build + model download are
# HARDWARE-UNVERIFIED, so the shipping build + CI gate stay lean. When the
# feature is OFF, the seam still compiles and `transcribe_*` returns a clear
# "feature disabled" error (same idiom as SundayPaper's `pdf` feature).
whisper = ["dep:whisper-rs", "dep:tempfile", "dep:sha2"]
# R3: live RTMP streaming (multi-destination tee + lower-third overlays). NO new
# native dep — ffmpeg is a sidecar — so the gate only compiles the spawn seam
# in/out. DEFAULT-OFF: the camera open + RTMP push are NETWORK/HARDWARE-
# UNVERIFIED, and the shipping/CI gate stays lean. When OFF the commands return
# a clear `feature_disabled` error (same idiom as `editor`/`whisper`).
streaming = []
# R3 NDI: receive a network NDI source over a loopback-TCP bridge and composite
# it as an overlay. DEFAULT-OFF. The NDI SDK is NOT bundled here — the seam is a
# STUB returning a clear "NDI SDK not bundled — see NEEDS-RICHARD" error; the
# pure source-discovery/pixfmt/input-arg logic lives in `sundayrec-core::ndi`.
# Enabling the feature compiles the real transmit SENDER: it dlopens the NDI
# runtime (`libndi`) at runtime via `libloading`, so the app still builds WITHOUT
# the NDI SDK and returns a clear error when the runtime isn't installed. The
# receive side remains a stub. SDK/HARDWARE-UNVERIFIED (no libndi or NDI receiver
# in CI) — validate on a real NDI rig before shipping the feature.
ndi = ["dep:libloading"]
# Bridge Integration #2: subscribe to the SundayStage live cue channel over
# Supabase Realtime. Reuses `reqwest` (the WebSocket client is the only extra),
# so the wire is INFRA-UNVERIFIED. The LiveEvent→chapter mapping is the
# unit-tested `sundayrec-core::integrations::live_bridge`.
bridge = ["dep:tokio-tungstenite", "dep:futures-util"]
# R7 auto-update: `tauri-plugin-updater` (pull API — check/download/install). The
# `process` plugin (relaunch) is already a default dep. DEFAULT-OFF: a real
# update needs a SIGNED release + an updater keypair in `tauri.conf.json` (see
# docs/NEEDS-RICHARD.md), none of which exist in CI/dev, so the network fetch +
# signature verify + relaunch are NETWORK/GUI-UNVERIFIED. The status model +
# dev-check guard + semver decision are the unit-tested `sundayrec-core::update`.
# When OFF the `update_*` commands return a clear `feature_disabled` error (same
# idiom as `editor`/`streaming`).
updater = ["dep:tauri-plugin-updater"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Pure, GUI-free domain core — the recorder behaviour distilled from Electron.
sundayrec-core = { path = "../crates/sundayrec-core" }

tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
# Native file dialogs (open/save recordings) — needed from early phases.
tauri-plugin-dialog = "2.7.1"
# `process` plugin: relaunch/exit, used by the updater flow later.
tauri-plugin-process = "2"
# Native notifications — the scheduler (Fase 5) fires "recording starts in N
# min" reminders and preflight/missed alerts from the backend, even when the
# window is hidden in the tray.
tauri-plugin-notification = "2"

# Native audio I/O (CoreAudio / WASAPI) — used by the VU metering engine to
# read microphone levels in Rust, so the webview never needs `getUserMedia`.
cpal = "0.15"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Encodes MJPEG preview frames as base64 so they cross the Tauri event boundary
# as plain JSON (the renderer drops them into `data:image/jpeg;base64,…`).
base64 = "0.22"

# Async process control for the ffmpeg sidecar. We use `tokio::process` (not
# `std::process`) for the recorder + MJPEG-preview because we need to stream
# stderr/stdout line-by-line in real time (parsing `size=`/`silence_*` progress)
# while the process keeps running, and to send a graceful `q` on stdin to stop
# encoding cleanly. `std::process` only gives us a blocking `wait()`/`output()`.
# `test-util` powers the `#[tokio::test(start_paused = true)]` time-paused unit
# tests (worker/preroll timeouts). It used to ride in via a transitive dev path;
# declared explicitly so the test gate stays green independent of the lock graph.
tokio = { version = "1", features = ["full", "test-util"] }
thiserror = "2"
# Wall-clock → local civil time for the scheduler shell. The pure decisions live
# in `sundayrec-core::schedule` (clock-free); this crate owns `Local::now()` and
# feeds the `NaiveDateTime` in. `clock` (default) is required here for `Local`.
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Local-first storage. Replaces Electron's `electron-store` (a JSON blob) with
# SQLite via sqlx. Runtime-checked queries (no DATABASE_URL / `.sqlx` cache
# needed to build); `migrate` runs the versioned schema in `migrations/`.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
] }
# Time-ordered ids (UUID v7) for rows — sortable by creation without a separate
# timestamp index.
uuid = { version = "1", features = ["v4", "v7"] }

# OS-native secret storage. Replaces Electron's `safeStorage` — OAuth tokens and
# stream keys live in the macOS Keychain / Windows Credential Manager, never in
# a plaintext file.
keyring = { version = "3", features = ["apple-native", "windows-native"] }

# Type generation for the frontend (run with `cargo test export_bindings`).
ts-rs = { version = "11", features = ["serde-compat"] }

# Free-disk-space probe for the preflight check (F2.2). `fs4` is a tiny,
# dependency-light cross-platform wrapper over the native statfs /
# GetDiskFreeSpaceEx calls (`fs4::available_space(path)`), chosen over the much
# heavier `sysinfo` (which pulls a whole process/CPU/disk inventory we don't
# need just to read free bytes on one volume).
fs4 = "1.1"

# HTTP client for the cloud upload worker + OAuth token exchange/refresh (Fase
# 6). rustls (no system OpenSSL). The pure decisions (chunk math, retry
# classification, token-body shaping) live in `sundayrec-core::cloud`; reqwest is
# just the wire.
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "charset",
    "http2",
    "json",
] }

# ── Optional Electron-parity seam deps (default-off, see [features]) ──────────
# PU-1 SMTP transport. rustls (no system OpenSSL), tokio runtime; the Gmail-API
# path needs none of this (it reuses `reqwest`), so lettre is pulled only when
# the `email` feature is on. `optional = true` keeps it out of the default build.
lettre = { version = "0.11", default-features = false, features = [
    "tokio1-rustls-tls",
    "smtp-transport",
    "builder",
], optional = true }
# PU-2 deep-link scheme registration (`sundayrec://…`) for the OAuth/import flow.
tauri-plugin-deep-link = { version = "2", optional = true }
# Launch-at-login (OS login item) so scheduled recordings actually fire after a
# reboot. Always compiled — auto-start is core to the unattended-recorder use case.
tauri-plugin-autostart = "2"
# PU-5 whisper.cpp bindings (transcription). Pulled only under `--features
# whisper`; the build compiles libwhisper from source (a C/C++ toolchain),
# HARDWARE-UNVERIFIED, so it stays out of the default build + CI gate.
whisper-rs = { version = "0.14", optional = true }
# Bridge #2 WebSocket client for the Supabase Realtime subscription. rustls (no
# system OpenSSL); pulled only under `--features bridge`. INFRA-UNVERIFIED.
tokio-tungstenite = { version = "0.24", default-features = false, features = [
    "rustls-tls-webpki-roots",
    "connect",
], optional = true }
# Sink/Stream combinators for the Realtime WebSocket loop (bridge feature only).
futures-util = { version = "0.3", optional = true }
# R3 NDI transmit: dlopen the NDI runtime (`libndi`) at RUNTIME so the app builds
# WITHOUT the NDI SDK and runs cleanly when the runtime is absent. Pulled only
# under `--features ndi`. No SDK headers needed — the FFI ABI is declared by hand
# in `src/ndi/sender.rs` to match libndi's public C API.
libloading = { version = "0.8", optional = true }
# PU-5 whisper seam writes the 16 kHz WAV to a temp dir before inference. Pulled
# only under `--features whisper` (also a dev-dep below for the storage tests).
tempfile = { version = "3", optional = true }
# PU-5 whisper model-download integrity check (SHA-256). Already in the tree via
# `keyring`; pulled directly only under `--features whisper` for the download seam.
sha2 = { version = "0.10", optional = true }
# R7 auto-update plugin (pull API). Pulled only under `--features updater`; a
# real update needs a signed release + keypair, so it stays out of the default
# build + CI gate. NETWORK/GUI-UNVERIFIED.
tauri-plugin-updater = { version = "2", optional = true }

# ── macOS-only: trackpad haptics (Force Touch) ───────────────────────────────
# The editor fires subtle haptic taps via `NSHapticFeedbackManager`. These are
# the same `objc2` 0.6 lineage Tauri (muda) already vendors, declared directly
# here only so the macOS command can name them; `dispatch2` hops the one-shot tap
# onto the main thread. macOS-gated so no other platform pulls AppKit bindings.
[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "std",
    "NSHapticFeedback",
    "NSResponder",
] }
objc2-foundation = { version = "0.3", default-features = false, features = [
    "std",
] }
dispatch2 = { version = "0.3", default-features = false, features = ["std"] }
# Raw Objective-C messaging for the AVFoundation camera/mic authorization query
# (no typed `objc2-av-foundation` binding is vendored, so we look the class up at
# runtime and `msg_send!` `authorizationStatusForMediaType:`). Same objc2 0.6
# lineage as the AppKit bindings above.
objc2 = { version = "0.6", default-features = false, features = ["std"] }

[dev-dependencies]
# Throwaway temp databases for the storage tests — no app, no device.
tempfile = "3"
